# Astromech32-DriveModule

./: .gitignore  .gitmodules  LICENSE
.github/workflows/: esp-idf-latest.yaml
components/bluepad32_arduino/: ArduinoConsole.cpp
components/bluepad32_arduino/include/: ArduinoConsole.h
main/: CMakeLists.txt  Kconfig.projbuild  joysticks.cpp  joysticks.h  sketch.cpp
